common/00-rabbitmq/rabbitmq.yaml
---
# Source: rabbitmq-ha/templates/service-discovery.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-rabbitmq-ha-discovery

  labels:
    app: rabbitmq-ha
    chart: rabbitmq-ha-1.33.0
    release: rabbitmq
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: http
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: amqp
    - name: epmd
      protocol: TCP
      port: 4369
      targetPort: epmd
  publishNotReadyAddresses: true
  selector:
    app: rabbitmq-ha
    release: rabbitmq
  type: ClusterIP
---
# Source: rabbitmq-ha/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-rabbitmq-ha

  labels:
    app: rabbitmq-ha
    chart: rabbitmq-ha-1.33.0
    release: rabbitmq
spec:
  clusterIP: 'None'
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: http
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: amqp
    - name: epmd
      protocol: TCP
      port: 4369
      targetPort: epmd

  selector:
    app: rabbitmq-ha
    release: rabbitmq
  type: ClusterIP
---
# Source: rabbitmq-ha/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-rabbitmq-ha

  labels:
    app: rabbitmq-ha
    chart: rabbitmq-ha-1.33.0
    release: rabbitmq
spec:
  podManagementPolicy: OrderedReady
  serviceName: rabbitmq-rabbitmq-ha-discovery
  replicas: 3
  updateStrategy:
    type: OnDelete
  selector:
    matchLabels:
      app: rabbitmq-ha
      release: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq-ha
        release: rabbitmq
      annotations:
        checksum/config: 36fa3db8a70487f60176c50f4f651a4e094a3f73f768826ca48670c15f3678c5
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 101
        runAsGroup: 101
        runAsNonRoot: true
        runAsUser: 100

      serviceAccountName: payment-sa
      containers:
        - name: rabbitmq-ha
          image: rabbitmq:3.7.15-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: epmd
              protocol: TCP
              containerPort: 4369
            - name: amqp
              protocol: TCP
              containerPort: 5672
            - name: http
              protocol: TCP
              containerPort: 15672
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - 'wget -O - -q --header "Authorization: Basic `echo -n \"$RABBIT_MANAGEMENT_USER:$RABBIT_MANAGEMENT_PASSWORD\"
                  | base64`" http://localhost:15672/api/healthchecks/node | grep -qF "{\"status\":\"ok\"}"'
            failureThreshold: 6
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - 'wget -O - -q --header "Authorization: Basic `echo -n \"$RABBIT_MANAGEMENT_USER:$RABBIT_MANAGEMENT_PASSWORD\"
                  | base64`" http://localhost:15672/api/healthchecks/node | grep -qF "{\"status\":\"ok\"}"'
            failureThreshold: 6
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 1024Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/rabbitmq
            - name: config
              mountPath: /etc/rabbitmq
            - name: definitions
              mountPath: /etc/definitions
              readOnly: true

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                topologyKey: 'kubernetes.io/hostname'
                labelSelector:
                  matchLabels:
                    app: rabbitmq-ha
                    release: rabbitmq
      volumes:
        - name: config
          emptyDir: {}
        - name: configmap
          configMap:
            name: rabbitmq-rabbitmq-ha
        - name: definitions
          secret:
            secretName: rabbitmq-rabbitmq-ha
            items:
              - key: definitions.json
                path: definitions.json
  volumeClaimTemplates:
    - metadata:
        name: data
        annotations:
      spec:
        accessModes:
          - 'ReadWriteOnce'
        resources:
          requests:
            storage: '8Gi'
        storageClassName: 'acs-abs'
